Lesson14 HW13 fix